# cloud-function-example

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: fashion_mnist_weights.index
src/: delete_image.py  fashion_mnist_weights.index  prepare_image.py  request.py  train.py  upload.py
src/cloud_functions/: main.py  requirements.py
